<resources>
    <string name="app_name">BAMX</string>
    <string name="edtUsername">Usuario</string>
    <string name="edtPassword">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>

    <string name="edtFolio">Folio</string>
    <string name="edtTienda">Tienda</string>
    <string name="edtResponsable">Responsable</string>
    <string name="edtRol">Rol</string>
    <string name="btnProductos">Productos</string>

    <string name="txtFechaHora">Fecha y hora</string>
    <string name="txtUbicacion">Dirección</string>
    <string name="txtSucursal">Determinante_Sucursal</string>
    <string name="txtResponsable">Nombre compelto</string>
    <string name="txtAbarrote">Cantidad</string>
    <string name="txtFrutaVerdura">Cantidad</string>
    <string name="txtPan">Cantidad</string>
    <string name="txtNoComestible">Cantidad</string>
    <string name="txtTotal">Cantidad</string>
    <string name="btnEditar">Editar</string>
    <string name="btnEnviar">Enviar</string>

    <string-array name="sucursales">
        <item>Seleccione sucursal</item>
        <item>Casa Alonso</item>
        <item>Oxxo Gobernadores</item>
        <item>Café Central Plaza Bugambilia</item>
        <item>Biscochos Y Pasteles Alicia</item>
        <item>Unilever Holanda</item>
        <item>Agroparque Yecapixtla</item>
        <item>La Costeña</item>
        <item>Ganaderos Productores de Leche Alpura</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="almacen">Almacen</string>
    <string name="stores">Stores</string>

</resources>