<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FF9300"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|start"
                app:srcCompat="@drawable/manzana" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Operador"
                android:textColor="#FDFDFD"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgSalir"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/log_out" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="REGISTRAR DONATIVO"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Fecha y hora:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFechaHoraRD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:text="@string/txtFechaHora"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="Ubicacion"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtUbicacionRD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:text="@string/txtUbicacion"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Folio"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtFolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtFolio"
            android:textColor="#C4C4C4" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Tienda"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtTienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtTienda"
            android:textColor="#C4C4C4" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Responsable"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtResponsable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtResponsable" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Rol"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtRol"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/edtRol" />

        <Button
            android:id="@+id/btnProductos"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F3071E"
            android:text="@string/btnProductos" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>