<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FF9300"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|start"
                app:srcCompat="@drawable/manzana" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Operador"
                android:textColor="#FDFDFD"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgSalir"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/log_out" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="DONATIVO"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Fecha y hora:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFechaHora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/txtFechaHora"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Ubicación:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtUbicacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/txtUbicacion"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Sucursal:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSucursal"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/txtSucursal"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Responsable:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtResponsable"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/edtResponsable"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Productos"
            android:textColor="#FF9300"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Abarrote:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtAbarrote"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/txtAbarrote"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Fruta y verdura:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFrutaVerdura"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/txtFrutaVerdura"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Pan:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPan"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/txtPan"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="No comestible:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtNoComestible"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/txtNoComestible"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Total:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="10dp"
                android:background="#F4F4F4"
                android:text="@string/txtTotal"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="125dp"
                android:layout_height="55dp"
                android:backgroundTint="#FF9300"
                android:text="@string/btnEditar" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="125dp"
                android:layout_height="55dp"
                android:layout_marginLeft="70dp"
                android:backgroundTint="#F3071E"
                android:text="@string/btnEnviar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>